--- a/.github/workflows/testpack_build.yml
+++ b/.github/workflows/testpack_build.yml
@@ -33,27 +33,22 @@ jobs:
       - name: 3. 安装 packwiz
         run: go install github.com/packwiz/packwiz@latest
 
-      - name: 4. 导出 Curseforge 整合包
+      - name: 4. 导出 Modrinth 整合包
         id: export
         run: |
-          packwiz curseforge export
-
+          packwiz modrinth export
+      
       - name: 5. 重命名整合包文件
         run: |
-          original_name=$(ls *.zip | sed 's/.zip$//')
+          original_name=$(ls *.mrpack | sed 's/.mrpack$//')
           cd .. && short_sha=$(git log -1 --format="%h" -- pack/)
           new_name="${original_name}-build-${short_sha}"
-          cd pack && mv "${original_name}.zip" "${new_name}.zip"
-          echo "FILE_PATH=${new_name}.zip" >> $GITHUB_ENV
+          cd pack && mv "${original_name}.mrpack" "${new_name}.mrpack"
+          echo "FILE_PATH=${new_name}.mrpack" >> $GITHUB_ENV
           echo "FILE_NAME=${new_name}" >> $GITHUB_ENV
-
-      - name: 6. 创建空目录并解压
-        run: |
-          mkdir -p unzipped
-          unzip -O UTF-8 "$FILE_PATH" -d unzipped/
-
-      - name: 7. 上传至 Artifact
+      
+      - name: 6. 上传至 Artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.FILE_NAME }}
-          path: pack/unzipped/
+          path: pack/${{ env.FILE_PATH }}
